# fast-dqn-caffe

./: .gdb_history  .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fast_dqn  training_log.csv
ale/: ale
ale/doc/examples/: ale-fifoInterfaceExample  ale-sharedLibraryInterfaceExample  ale-videoRecordingExample
caffe/: .ycm_extra_conf.py  Makefile
caffe/include/caffe/: data_layers.hpp
caffe/python/caffe/: net_spec.py
caffe/src/caffe/layers/: a4_data_layer.cpp  a4_data_layer.cu  atari_data_layer.cpp  eltwise_layer.cpp  joint_model_data_layer.cpp  joint_model_data_layer.cpp.bak  joint_model_data_layer.cu
caffe/src/caffe/proto/: caffe.proto
models/: dqn.prototxt  dqn_predict.prototxt  dqn_solver.prototxt  fast_dqn_solver.prototxt
scripts/: plot.py
src/: .ale_environment.cpp.swp  .fast_dqn_main.cpp.swp  ale_environment.cpp  data_generator.cpp  environment.h  fast_dqn.cpp  fast_dqn.h  fast_dqn_main.cpp
xitari/: .gitignore  ale_interface.hpp
xitari/common/: ale_interface.cpp
